Add test run on the module-path in a forked process